# gnome-pilot

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  conduit.mk  configure.ac  gnome-pilot-4.0.pc.in  server.mk
applet/: AUTHORS  Makefile.am  OChangeLog  README  gpilot-applet-progress-private.h  gpilot-applet-progress.c  gpilot-applet-progress.h  gpilot-tray-sni.h  gpilot-tray.c  org.gnome.GnomePilot.applet.gschema.xml  pilot-applet.ui
capplet/: AUTHORS  Makefile.am  OChangeLog  README  gnome-pilot-assistant.c  gnome-pilot-assistant.h  gnome-pilot-capplet.c  gnome-pilot-capplet.h  gnome-pilot-cdialog.c  gnome-pilot-cdialog.h  gnome-pilot-ddialog.c  gnome-pilot-ddialog.h  gnome-pilot-pdialog.c  gnome-pilot-pdialog.h  gpilotd-capplet.ui  gpilotd-control-applet.c  gpilotd-control-applet.desktop.in.in  pilot.c  pilot.h  util.c  util.h
conduits/: Makefile.am  OChangeLog
conduits/backup/: Makefile.am  OChangeLog  README  TODO  backup.conduit.in  backup_conduit.c  backup_conduit.h
conduits/evolution-data-server/: Makefile.am  address-conduit.c  calendar-conduit.c  e-address.conduit.in  e-calendar.conduit.in  e-dialog-widgets.c  e-dialog-widgets.h  e-memo.conduit.in  e-pilot-map.c  e-pilot-settings.c  e-pilot-settings.h  e-pilot-util.c  e-pilot-util.h  e-todo.conduit.in  libecalendar-common-conduit.c  libecalendar-common-conduit.h  memo-conduit.c  todo-conduit.c
conduits/file/: AUTHORS  Makefile.am  OChangeLog  file.conduit.in  file_conduit.c  file_conduit.h  gpilot-install-file.1  gpilot_install_file.c  palm.keys.in
conduits/test/: Makefile.am  test.conduit.in  test_conduit.c
debian/: changelog  control  copyright  rules
gpilotd/: Makefile.am  OChangeLog  README  TODO  gnome-pilot-client-private.h  gnome-pilot-client.c  gnome-pilot-client.h  gnome-pilot-conduit-backup-private.h  gnome-pilot-conduit-backup.c  gnome-pilot-conduit-backup.h  gnome-pilot-conduit-config-private.h  gnome-pilot-conduit-config.c  gnome-pilot-conduit-config.h  gnome-pilot-conduit-file-private.h  gnome-pilot-conduit-file.c  gnome-pilot-conduit-file.h  gnome-pilot-conduit-management-private.h  gnome-pilot-conduit-management.c  gnome-pilot-conduit-management.h  gnome-pilot-conduit-private.h  gnome-pilot-conduit-standard-abs.c  gnome-pilot-conduit-standard-abs.h  gnome-pilot-conduit-standard-private.h  gnome-pilot-conduit-standard.c  gnome-pilot-conduit-standard.h  gnome-pilot-conduit-sync-abs.c  gnome-pilot-conduit-sync-abs.h  gnome-pilot-conduit.c  gnome-pilot-conduit.h  gnome-pilot-config.c  gnome-pilot-config.h  gnome-pilot-dbinfo.h  gnome-pilot-structures.c  gpilot-daemon.c  gpilot-daemon.h  gpilot-daemon.xml  gpilot-gui.c  gpilot-gui.h  gpilotd-session-wrapper.c  gpilotd.c  (+7 more)
help/: Makefile.am  gnome-pilot.omf.in
help/C/: gnome-pilot.xml
help/cs/: cs.po  gnome-pilot.xml
help/de/: de.po  gnome-pilot.xml
help/es/: es.po  gnome-pilot.xml
macros/: gob2.m4  pilot_link.m4
po/: ChangeLog  LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  am.po  ar.po  as.po  az.po  bn_IN.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  it.po  ja.po  kn.po  ko.po  lt.po  lv.po  mk.po  ml.po  mr.po  ms.po  nb.po  ne.po  (+24 more)
utils/: Makefile.am  OChangeLog  gpilotd-client.c  gpilotdcm-client.c  make-password.c
